fix css spacing

--- a/omn/src/app/profile/pages/locuinte/components/locuinte-view-card/locuinte-view-card.component.scss
+++ b/omn/src/app/profile/pages/locuinte/components/locuinte-view-card/locuinte-view-card.component.scss
@@ -6,7 +6,7 @@
 }
 
 .add {
-  font-size: rem(24);
+  font-size: rem(16);
 }
 
 ion-item {
