--- a/omn/src/app/profile/pages/locuinte/components/locuinte-view/locuinte-view.component.scss
+++ b/omn/src/app/profile/pages/locuinte/components/locuinte-view/locuinte-view.component.scss
@@ -3,11 +3,6 @@
 ion-content {
   --background: fff;
 }
-
-.info {
-  background: var(--ion-background-color);
-}
-
 .fond {
   height: rem(48);
   --background: #e5f2ec;
