--- a/omn/src/theme/components/_colors.scss
+++ b/omn/src/theme/components/_colors.scss
@@ -165,3 +165,7 @@
 .bg-white-layer-gradient {
   background: $white-layer-gradient;
 }
+
+.alt-bg {
+  background: $alt-bg;
+}
