--- a/omn/src/theme/components/_typography.scss
+++ b/omn/src/theme/components/_typography.scss
@@ -166,11 +166,3 @@ ion-label.input-label,
 .shadow-1 {
   box-shadow: $box-shadow-1;
 }
-
-.mb-13 {
-  margin-bottom: rem(13);
-}
-
-.mx-42 {
-  margin: 0 rem(42) 0 rem(42) !important;
-}
